@@ -123,6 +123,12 @@ a visual diff an merge tool.
 gonvert</a> - A unit conversion utility. 
 </ul>
 
+<ul>
+<li><a href="http://lpg.ticalc.org/prj_tilp">TiLP</a> -
+a linking program for Texas Instruments' graphing calculators, using
+libglade.
+</ul>
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
@@ -814,11 +820,6 @@ SIPSet</a> - a SIP (Session Initiation Protocol) based softphone.
 </ul>
 
 <ul>
-<li><a href="http://lpg.ticalc.org/prj_tilp">TiLP</a> -
-a linking program for Texas Instruments' graphing calculators.
-</ul>
-
-<ul>
 <li><a href="http://pxes.sourceforge.net">pxesconfig</a> -
 the graphical configuration of PXES Linux Thin Client. 
 (PXES is a micro Linux distribution for thin clients.)
@@ -883,6 +884,12 @@ a simple interface to scan and print a document.
 <li><a href="http://sourceforge.net/projects/ozcdplayer/">ozcdplayer</a> -
 a simple interface to play cd's.
 </ul>
+
+<ul>
+<li><a href="http://gequel.sourceforge.net/">gequel</a> -
+a Mysql GUI using Glade.
+</ul>
+
 
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
