@@ -167,6 +167,21 @@ Oct&nbsp;1&nbsp;2002
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
+Apr&nbsp;28&nbsp;2002
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Dutch Translation of Glade Manual</B>
+<P>
+Saki Arkoudopoulos has written a
+<a href="http://lumumba.luc.ac.be/~saki/courses/Glade">Dutch translation of
+the Glade Manual</a>.
+</font></td></tr>
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
 Apr&nbsp;20&nbsp;2003
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
